@@ -9,7 +9,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class AllEmployeeServiceImpl implements AllEmployeesService {
@@ -28,7 +27,7 @@ public class AllEmployeeServiceImpl implements AllEmployeesService {
         }
         return employees.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private EmployeeDTO convertToDTO(Employee employee) {
